<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_description">Mod SystemUI.apk for Xperia. Tap here to configure settings.</string>
    <string name="statusbar">Statusbar</string>
    <string name="label_brigi">Brighten status bar icon</string>
    <string name="sum_brigi">Disable Automatic dimming.</string>
    <string name="label_bigi">Enlarge status bar icon</string>
    <string name="sum_bigi">Disable Automatic dimming.</string>
    <string name="label_nosim">Hide No SIM icon</string>
    <string name="sum_nosim">Hide No SIM icon when you have no SIM.</string>
    <string name="quick">Notification &#38; Quick Settings</string>
    <string name="label_tranz144">Change number of rows</string>
    <string name="sum_tranz144">Change the number of rows and unlimited items in quick settings.</string>
    <string name="label_numcol">Change number of columns</string>
    <string name="sum_numcol">Change the number of columns</string>
    <string name="misc">Misc</string>
    <string name="label_fullalert">Change battery charged alert level</string>
    <string name="sum_fullalert">Change battery level for battery charged alert. Check \"Play sound when battery is full\" in Accessibility settings.</string>
    <string name="fullalert_title">Battery level (0 - 100)</string>
    <string name="fullalert_summary">Default value is 100 (fully charged)</string>
    <string name="recent">Recent</string>
    <string name="label_closeall">Show Close All button</string>
    <string name="sum_closeall">Enable Close All button in recent panel.</string>
    <string name="label_nosearchbar">Hide search widget</string>
    <string name="sum_nosearchbar">Hide search widget in recent panel.</string>
    <string name="label_rebootaf">Note</string>
    <string name="nosum">You may need to reboot for changes to take effect.</string>
    <string name="list_title">The number of rows</string>
    <string name="list_summary">Specify the number of rows of the quick settings. Default value is 4.</string>
    <string name="list_dialogtitle">Number</string>
    <string name="list_title_numcol">The number of columns</string>
    <string name="list_summary_numcol">Specify the number of columns of the quick settings. Default value is 3.</string>
    <string name="list_dialogtitle_numcol">Number</string>
    <string name="label_nodismiss">Disable dismiss all button</string>
    <string name="sum_nodismiss">Disable dismiss all button in notification drawer.</string>
    <string name="label_wide_notification_drawer">Change notification drawer width</string>
    <string name="sum_wide_notification_drawer">Change notification drawer width (in dpi). This is for tablet, but may work for phone as well.</string>
    <string name="label_wide_notification_drawer_i">Notification drawer width</string>
    <string name="sum_wide_notification_drawer_i">Specify dpi of the notification drawer width. Default value is 620.0.</string>
    <string name="label_quick_settings_tile_text_size">Change label size of quick settings tile</string>
    <string name="sum_quick_settings_tile_text_size">Change label text size of quick settings tiles (in sp).</string>
    <string name="label_quick_settings_tile_text_size_i">Label text size of quick settings tile</string>
    <string name="sum_quick_settings_tile_text_size_i">Specify dpi of the label text size for quick settings tiles. If you input 0.0, label text will be hidden. Default value is 12.0.</string>
    <string name="label_hide_thumb_keyboard_launcher">More space for Keyboard Launcher</string>
    <string name="sum_hide_thumb_keyboard_launcher">Hide unnecessary image in recent apps of Keyboard Launcher to give more space for app list.</string>
    <string name="label_locale_specific_sorting_style">Use locale specific sorting style</string>
    <string name="sum_locale_specific_sorting_style">Use locale specific sorting style. (e.g. Use あ行 instead of あ,い,う,え,お for Japanese)</string>
</resources>
